# LanguageDynamics

./: .gitignore
Code/: Agent.cpp  CMakeLists.txt  LanguageDynamics.cpp  LanguageDynamics.h  Simulation.cpp  Simulation.h
Code/DataAnalyser/: main.cpp
Code/DataGenerator/: main.cpp
Code/Executable/: makefile
DataAnalyser/: makefile
DataGenerator/: Agent.cpp  Agent.h  LanguageDynamics.cpp  LanguageDynamics.h  Model.cpp  Model.h  Simulation.cpp  Simulation.h  main.cpp  makefile
Experiments/: experiment.py  rename.py
Model Description/: modelDescription.tex
TimerExample/: main.cpp
